a lot of changes for styling and translations

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -1,4 +1,5 @@
 {
+    "headerLanguage": "FR",
     "landingSubheader": "Are You Ready For An Adventure?",
     "landingDescription": "In a dangerous world, you play as a human being. Can you survive by making the right choices? Pick the wrong one and it's game over for you!",
     "landingDisclaimer1": "Disclaimer: this game does is not yet mobile compatible.",
