--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -1,4 +1,5 @@
 {
+    "headerLanguage": "EN",
     "landingSubheader": "Préparez-vous à l'aventure",
     "landingDescription": "Situé.e dans un monde dangéreux, vous assumez le rôle d'un être humain. Essayez de survivre en faisant le bon choix. Sinon, c'est fini!",
     "landingDisclaimer1": "Avertissement: ce jeu n'est pas encore actuellement adapté aux téléphones portables.",
