--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -1,5 +1,6 @@
 {
     "headerLanguage": "FR",
+    "headerLeaveDisclaimer": "You will lose progress. Are you sure you want to leave?",
     "landingSubheader": "Are You Ready For An Adventure?",
     "landingDescription": "In a dangerous world, you play as a human being. Can you survive by making the right choices? Pick the wrong one and it's game over for you!",
     "landingDisclaimer1": "Disclaimer: this game does is not yet mobile compatible.",
