--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -1,5 +1,6 @@
 {
     "headerLanguage": "EN",
+    "headerLeaveDisclaimer": "Si vous quittez la session, vous perdrez vos progrès. Voulez-vous encore continuez?",
     "landingSubheader": "Préparez-vous à l'aventure",
     "landingDescription": "Situé.e dans un monde dangéreux, vous assumez le rôle d'un être humain. Essayez de survivre en faisant le bon choix. Sinon, c'est fini!",
     "landingDisclaimer1": "Avertissement: ce jeu n'est pas encore actuellement adapté aux téléphones portables.",
