hotfix: translation fixes on copyright

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -3,15 +3,15 @@
     "headerLeaveDisclaimer": "You will lose progress. Are you sure you want to leave?",
     "landingSubheader": "Are You Ready For An Adventure?",
     "landingDescription": "In a dangerous world, you play as a human being. Can you survive by making the right choices? Pick the wrong one and it's game over for you!",
-    "landingDisclaimer1": "Disclaimer: this game does is not yet mobile compatible.",
-    "landingDisclaimer1Bolded": "Please use a computer!",
+    "landingDisclaimer1": "Disclaimer: this game is currently not mobile compatible. Sorry!",
+    "landingDisclaimer1Bolded": "Please use a computer for the best experience.",
     "landingLabelInputName": "Enter your name and pick a character to begin:",
     "landingLabelNewGame": "New Game",
     "landingSubheaderAbout": "About",
     "landingAboutIsInspiredBy": "is inspired by the book",
     "landingAboutOfAuthors": "from Fabrice Parme and Lewis Trondheim.",
     "landingAboutCreatedBy": "Created by",
-    "landingAboutProjectClassCopyright": "this text adventure game is a digital recreation of the original book. This is also a creative project for the course FREN 301 (Fall 2021) at the University of Alberta. Therefore, the developer of this web application does not hold the rights of anything referencing the aforementioned book.",
+    "landingAboutProjectClassCopyright": "this text adventure game is a digital recreation of the original book. It is also a creative project for the course FREN 301 (Fall 2021) at the University of Alberta. The developer of this app does not legally hold any rights to the book.",
     "soloLabelCharacter": "Character", 
     "soloLabelLocation": "Location",
     "soloLabelName": "Name",
