chore: added unit tests + placeholder text

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -6,6 +6,7 @@
     "landingDisclaimer1": "Disclaimer: this game is currently not mobile compatible. Sorry!",
     "landingDisclaimer1Bolded": "Please use a computer for the best experience.",
     "landingLabelInputName": "Enter your name and pick a character to begin:",
+    "landingPlaceholderInputName": "Enter a name for your character here",
     "landingLabelNewGame": "New Game",
     "landingSubheaderAbout": "About",
     "landingAboutIsInspiredBy": "is inspired by the book",
