--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -6,6 +6,7 @@
     "landingDisclaimer1": "Avertissement: ce jeu n'est pas actuellement adapté aux téléphones portables. Désolé!",
     "landingDisclaimer1Bolded": "Veuillez utiliser un ordinateur pour une expérience plus agréable.",
     "landingLabelInputName": "Saisissez votre nom et choisissez votre personnage pour commencer:",
+    "landingPlaceholderInputName": "Saisissez votre nom de personnage ici",
     "landingLabelNewGame": "Nouvelle partie",
     "landingSubheaderAbout": "À propos",
     "landingAboutIsInspiredBy": "s'est inspiré du livre",
